aks/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tripviewer-ingress
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/user-java
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/user
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tripviewer-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /static(/|$)(.*)
